Oops! Fix spacing on front page

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -22,7 +22,7 @@
     
     --font-size: clamp(1rem, 2vw, 1.2rem);
 
-    --spacer: clamp(2rem, 3v2, 5rem);
+    --spacer: clamp(2rem, 3vw, 5rem);
 
     --main-padding: 3vw;
     }
